traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:22: error: not found: value descend
      if(descend)
         ^